# plothole

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh  example_layout.yaml  fonts.json  index.html  vercel.json
assets/: iosevka_skeleton.json
src/: animate.rs  cp_view.rs  device.rs  font.rs  hershey.rs  iosevka.rs  lib.rs  main.rs  motion.rs  optimize.rs  preview.rs  scene3d.rs  ttf.rs  tui.rs
