[package]
name = "plothole"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
num-traits = "0.2.19"
piet = "0.8.0"
piet-common = "0.8.0"
piet-svg = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[build-dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
