[package]
name = "plothole"
version = "0.1.0"
edition = "2024"

[lib]
name = "plothole"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "plothole"
path = "src/main.rs"
required-features = ["native"]

[features]
default = ["native"]
native = [
    "dep:serialport",
    "dep:rayon",
    "dep:gif",
    "dep:clap",
    "dep:piet",
    "dep:piet-common",
    "dep:piet-svg",
    "dep:winit",
    "dep:softbuffer",
    "dep:crossterm",
]
wasm = [
    "dep:wasm-bindgen",
    "dep:web-sys",
    "dep:js-sys",
]

[dependencies]
# Always available (pure Rust, wasm-compatible)
ttf-parser = "0.21"
tiny-skia = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
uom = "0.37.0"
num-traits = "0.2.19"

# Native-only
serialport  = { version = "4",      optional = true }
rayon       = { version = "1",      optional = true }
gif         = { version = "0.13",   optional = true }
clap        = { version = "4.5.51", features = ["derive"], optional = true }
piet        = { version = "0.8.0",  optional = true }
piet-common = { version = "0.8.0",  optional = true }
piet-svg    = { version = "0.8.0",  optional = true }
winit       = { version = "0.30",   optional = true }
softbuffer  = { version = "0.4",    optional = true }
crossterm   = { version = "0.28",   optional = true }

# WASM-only
wasm-bindgen = { version = "0.2", optional = true }
js-sys       = { version = "0.3", optional = true }
[dependencies.web-sys]
version = "0.3"
optional = true
features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Window",
    "Document",
]

[build-dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
